Fix header spacing bug.

--- a/less/diamond-style.less
+++ b/less/diamond-style.less
@@ -843,7 +843,7 @@ html body {
 	header#navbar { position: relative; padding: 25px 0 15px 0; }
 	#main {
 		margin-top: 0;
-		padding-top: 20px;
+		//padding-top: 20px;
 		background: #FFF;
 	}
 
